# simplesettings

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  simplesettings.py
src/simplesettings-py/: settings.py  simplesettings.py
src/simplesettings_py/: __init__.py  settings.py
