[project]
name = "simplesettings-py"
version = "1.0.0"

authors = [
  { name="Stuntlover", email="stuntlover@aluvia.de" }
]

description = "Python settings files done simple."
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Stuntlover-TM/simplesettings"
"Bug Tracker" = "https://github.com/Stuntlover-TM/simplesettings/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
